--- a/week1/index.html
+++ b/week1/index.html
@@ -12,10 +12,7 @@
 
 </head>
 <body>
-    <h1>Marie Parker WDD 330 Portfolio</h1>
-    <ol id="list">
-        
-    </ol>
-    <script src="main.js"></script>
+    <h1>Marie Parker Week 1 Notes</h1>
+    <p></p>
 </body>
 </html>
