--- a/index.html
+++ b/index.html
@@ -13,9 +13,12 @@
 </head>
 <body>
     <h1>Marie Parker WDD 330 Portfolio</h1>
-    <ol id="list">
+    <div>
+        <h2>Block 1</h2>
+        <ol id="list">
         
-    </ol>
+        </ol>
+    </div>
     <script src="main.js"></script>
 </body>
 </html>
