--- a/week1/index.html
+++ b/week1/index.html
@@ -5,14 +5,24 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>WDD 330 Portfolio</title>
+    <title>Week 1 Notes</title>
     <meta name="description" content="Marie Parker's WDD 330 Portfolio">
 
     <link href="styles.css" rel="stylesheet">
 
 </head>
 <body>
-    <h1>Marie Parker Week 1 Notes</h1>
-    <p></p>
+    <h1>Marie Parker - Week 1 Notes</h1>
+    <div class="columns">
+        <div class="col1">
+            <h2>Notes</h2>
+        </div>
+        <div class="col2">
+            <h2>Questions</h2>
+            <ul>
+                
+            </ul>
+        </div>
+    </div>
 </body>
 </html>
