--- a/week1/index.html
+++ b/week1/index.html
@@ -16,6 +16,12 @@
     <div class="columns">
         <div class="col1">
             <h2>Notes</h2>
+            <ul>
+                <li>When in Javascript, use .value whenever you are getting input from the user.
+                    Use .innerHTML when you are going to display something.
+                </li>
+                <li>Use a section tag to display any output to a user.</li>
+            </ul>
         </div>
         <div class="col2">
             <h2>Questions</h2>
