--- a/week1/index.html
+++ b/week1/index.html
@@ -25,9 +25,7 @@
         </div>
         <div class="col2">
             <h2>Questions</h2>
-            <ul>
-                
-            </ul>
+                <p>Where is the localStorage? Is it just the server that the website is stored on?</p>
         </div>
     </div>
 </body>
