--- a/week1/index.html
+++ b/week1/index.html
@@ -16,16 +16,40 @@
     <div class="columns">
         <div class="col1">
             <h2>Notes</h2>
+            <h3>Book</h3>
             <ul>
                 <li>When in Javascript, use .value whenever you are getting input from the user.
                     Use .innerHTML when you are going to display something.
                 </li>
                 <li>Use a section tag to display any output to a user.</li>
             </ul>
+
+            <h3>Mobile First Design Strategy</h3>
+            <ul>
+                <li>Keep in mind how people hold their phones.</li>
+                <li>49% of people use only one hand. Try to place things within easy reach, so they can get
+                    to it without having to adjust their grip.</li>
+                <li>Speed matters. Reduce image usage, use SVG or webfonts, optimze and minimize
+                    CSS an JS files, GZIP your files.</li>
+                <li> Mobile friendly forms: 
+                    <ul>
+                        <li>only ask for absolutely necessary information</li>
+                        <li>ditch labels and put the label inside the text box</li>
+                        <li>taller boxes are easier for fingers to tap</li>
+                        <li>paginate or make the form grow depending on 
+                            what and how much information you need</li>
+                        <li>enable autofill</li>
+                        <li>bring up the most efficient keyboard</li>
+                    </ul> 
+                </li>
+                <li>Link phone numbers using <a href="tel:(enter digits only)">phone number</a></a></li>
+                
+                </ul>
         </div>
         <div class="col2">
             <h2>Questions</h2>
                 <p>Where is the localStorage? Is it just the server that the website is stored on?</p>
+                <p>What is GZIP and how do you do it?</p>
         </div>
     </div>
 </body>
