--- a/week1/index.html
+++ b/week1/index.html
@@ -42,7 +42,7 @@
                         <li>bring up the most efficient keyboard</li>
                     </ul> 
                 </li>
-                <li>Link phone numbers using "<a href="tel:(enter digits only)">" phone number</a></a></li>
+                <li>Link phone numbers using "<a href="tel:(enter digits only)">phone number</a>" </li>
                 
                 </ul>
         </div>
