--- a/week4/dice.html
+++ b/week4/dice.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <div>
-        A place to practice all the examples in Week 4<br>
+        A place to practice all the examples in Chp. 12 - Objects<br>
         <a href='index.html'>See some notes here</a>
     </div>
 </body>
