--- a/week4/index.html
+++ b/week4/index.html
@@ -16,7 +16,7 @@
     <div class="columns">
         <div class="col1">
             <h2>Notes</h2>
-            <h3>Objects</h3>
+            <h3>Object-Oriented Programming</h3>
             <ul>
                 <li>Primitive data types have their own constructor functions</br>
                 example: new Number(2);</br>
